# stm32f3discovery-template

./: Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config
src/: main.rs
